# code-recall

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject.toml  recall.sh  settings.py
.agent/rules/: python-expert.md
.github/workflows/: ci.yml
articles/: python_asyncio.md
code_recall/: __init__.py  app.py  config.py  content.py  domain.py  providers.py  questions.py
data/: fastapi_topics.json  rest_api_topics.json  system_design_topics.json
tests/: conftest.py  test_app.py  test_config.py  test_content.py  test_domain.py  test_evaluation_response.py  test_multiple_choice_question.py  test_multiple_choice_ui.py  test_providers.py  test_questions.py  test_recall_script.py  test_settings.py
