[project]
name = "code-recall"
version = "0.1.0"
description = "Flashcard-style recall of Python knowledge from articles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.1",
    "openai>=1.0.0",
    "textual>=6.11.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
authors = [
    { name = "Tihomir Manushev" }
]

[project.urls]
github = "https://github.com/haraGADygyl"
medium = "https://medium.com/@tihomir.manushev"
