[project]
name = "code-recall"
version = "0.1.0"
description = "Flashcard-style recall of Python knowledge from articles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.1",
    "openai>=1.0.0",
    "textual>=6.11.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
authors = [
    { name = "Tihomir Manushev" }
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]

[project.urls]
github = "https://github.com/haraGADygyl"
medium = "https://medium.com/@tihomir.manushev"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# Allow subclassing types from libraries without stubs (like Textual)
disallow_subclassing_any = false
# Allow untyped decorators from third-party libraries
disallow_untyped_decorators = false
